Fixed screen overflow on Login and Signup

--- a/css/login.scss
+++ b/css/login.scss
@@ -5,7 +5,7 @@
 #particles-js {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 	z-index: -1;
