--- a/css/signup.scss
+++ b/css/signup.scss
@@ -5,8 +5,8 @@
 #particles-js {
   width: 100%;
   height: 100%;
-  position: absolute;
-  top: 0;
+	position: fixed;
+ 	top: 0;
   left: 0;
 	z-index: -1;
 	background: rgb(31, 31, 40);
